# web-scraping

./: .gitignore  README.md  app.py  example_config.yaml  main.py  pyproject.toml  requirements.txt
src/: crawler.py  indexer.py
src/models/: page_analysis.py
src/pages/: analyze_page.py  crawl_page.py
src/services/: analyzer.py  crawler.py  indexer.py
src/utils/: config.py  mysql_schema.py  sqlite_schema.py
