[project]
name = "web-scraping-project"
version = "0.1.0"
description = "Search Engine application with web scraping capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.2",
    "pymysql>=1.1.1",
    "pyyaml>=6.0.2",
    "setuptools>=78.1.0",
    "spacy>=3.8.5",
    "streamlit>=1.44.1",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "pip>=25.0.1",
    "ruff>=0.11.4",
]
